--- a/backend/MovieReminderAPI/appsettings.json
+++ b/backend/MovieReminderAPI/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "default":"server=localhost;port=3306;user=root;password=Mjs1378@;database=MovieReminder"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
