connection strings added

--- a/src/MovieReminder/appsettings.json
+++ b/src/MovieReminder/appsettings.json
@@ -1,4 +1,8 @@
 {
+  "ConnectionStrings": {
+    "movieReminder": "Server=.;Database=MovieReminder;Trusted_Connection=True;MultipleActiveResultSets=true;",
+    "/DBContext/MovieReminderDbContext": "Server=(localdb)\\mssqllocaldb;Database=/DBContext/MovieReminderDbContext-b16bc494-2315-4efa-9f14-7432b6c66b80;Trusted_Connection=True;MultipleActiveResultSets=true"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
