--- a/src/UserAuth/appsettings.json
+++ b/src/UserAuth/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "movieReminderAuthentication": "Server=.;Database=MovieReminderAuthentication;Trusted_Connection=True;MultipleActiveResultSets=true;"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
