--- a/src/Backend/MovieReminder/appsettings.json
+++ b/src/Backend/MovieReminder/appsettings.json
@@ -1,7 +1,6 @@
 {
   "ConnectionStrings": {
-    "movieReminder": "Server=.;Database=MovieReminder;Trusted_Connection=True;MultipleActiveResultSets=true;",
-    "/DBContext/MovieReminderDbContext": "Server=(localdb)\\mssqllocaldb;Database=/DBContext/MovieReminderDbContext-b16bc494-2315-4efa-9f14-7432b6c66b80;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "movieReminder": "Server=.;Database=MovieReminder;Trusted_Connection=True;"
   },
   "Logging": {
     "LogLevel": {
