--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -18,7 +18,7 @@ jobs:
       with:
         dotnet-version: 6.0.x
     - name: Restore dependencies
-      run: dotnet restore ../src/Backend/Moviereminder
+      run: dotnet restore ../../src/Backend/Moviereminder
     - name: Build
       run: dotnet build --no-restore
     - name: Test
